* fixed wrong sized items on action drop menus * fixed browser share button display and sizing

--- a/bookface_auto.css
+++ b/bookface_auto.css
@@ -693,7 +693,7 @@
             display: inline-block !important;
        }
 		/* ACTION BUTTON LABELS */
-		.wall-item-actions-row button,
+		.wall-item-actions-row button:not(.button-browser-share),
 		.wall-item-actions-right button {
 		    position: relative;
 			display: block;
@@ -1077,6 +1077,13 @@
 			font-size: 20px;
 			position: relative;
 			top: 1px;
+		}
+		.wall-item-actions ul button,
+    	.wall-item-actions ul a {
+			font-size: 14px !important;
+			color: inherit !important;
+			line-height: 14px !important;
+			margin: 0 !important;
 		}
 		/* little vcard when you scroll down on profiles */
 		#vcard-short-photo-wrapper img, 
@@ -1921,6 +1928,9 @@ a.tag.label,
 		color: transparent;
 	}
 	/* NOTE: cannot simply empty or display none or button alignment gets messed up! */
+	.wall-item-actions-row .button-browser-share::after {
+		display: none !important;
+	}
 }
 /* 	Narrow Screen Phones in Landscape Orientation
 	==============================================
@@ -2798,7 +2808,7 @@ p.wall-item-announce,
             display: inline-block !important;
        }
        /* ACTION BUTTON LABELS */
-       .wall-item-actions-row button,
+       .wall-item-actions-row button:not(.button-browser-share),
        .wall-item-actions-right button {
               position: relative;
               display: block;
@@ -3207,6 +3217,13 @@ aside .widget li:hover {
               position: relative;
               top: 1px;
        }
+		.wall-item-actions ul button,
+    	.wall-item-actions ul a {
+			font-size: 14px !important;
+			color: inherit !important;
+			line-height: 14px !important;
+			margin: 0 !important;
+		}
 		/* little vcard when you scroll down on profiles */
 		#vcard-short-photo-wrapper img, 
 		#nav-short-info .contact-wrapper img {
@@ -4045,6 +4062,9 @@ a.tag.label,
 		color: transparent;
 	}
 	/* NOTE: cannot simply empty or display none or button alignment gets messed up! */
+	.wall-item-actions-row .button-browser-share::after {
+		display: none !important;
+	}
 }	
 /* 	Narrow Screen Phones in Landscape Orientation
 	==============================================
